...

                <TextView
                    android:id="@+id/clinic_form_general_data_name_mandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/obrigatorio"
                    android:textColor="@color/obrigatorio"
                    android:textSize="20sp"
...
                    app:layout_constraintBottom_toBottomOf="@+id/clinic_form_general_data_name_title"
                    app:layout_constraintStart_toEndOf="@+id/clinic_form_general_data_name_title"
                    app:layout_constraintTop_toTopOf="@+id/clinic_form_general_data_name" />

                <EditText
...

                <EditText
                    android:id="@+id/clinic_form_general_data_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:layout_marginEnd="8dp"
                    android:text="@string/fone_title"
                    app:layout_constraintEnd_toStartOf="@+id/clinic_form_general_data_phone"
                    app:layout_constraintHorizontal_bias="0.66"
                    app:layout_constraintStart_toStartOf="@+id/clinic_form_general_data_name_title"
...

                <EditText
                    android:id="@+id/clinic_form_address_zip_postal"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/clinic_form_address_street_mandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/clinic_form_address_street_title"
                    app:layout_constraintStart_toEndOf="@+id/clinic_form_address_street_title"
                    app:layout_constraintTop_toTopOf="@+id/clinic_form_address_street" />

                <EditText
...

                <TextView
                    android:id="@+id/clinic_form_address_number_mandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/clinic_form_address_number_title"
                    app:layout_constraintStart_toEndOf="@+id/clinic_form_address_number_title"
                    app:layout_constraintTop_toTopOf="@+id/clinic_form_address_number" />

                <EditText
...

                <EditText
                    android:id="@+id/clinic_form_address_complement"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/clinic_form_address_city_mandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/clinic_form_address_city_title"
                    app:layout_constraintStart_toEndOf="@+id/clinic_form_address_city_title"
                    app:layout_constraintTop_toTopOf="@+id/clinic_form_address_city" />

                <EditText
...

                <TextView
                    android:id="@+id/clinic_form_address_neighborhood_mandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    app:layout_constraintBottom_toBottomOf="@+id/clinic_form_address_neighborhood_title"
                    app:layout_constraintStart_toEndOf="@+id/clinic_form_address_neighborhood_title"
                    app:layout_constraintTop_toTopOf="@+id/clinic_form_address_neighborhood" />


...
                    android:text="@string/estado_title"
                    app:layout_constraintBottom_toBottomOf="@+id/clinic_form_address_neighborhood"
                    app:layout_constraintEnd_toStartOf="@+id/clinic_form_address_state_spinner"
                    app:layout_constraintTop_toTopOf="@+id/clinic_form_address_neighborhood" />

...

                <LinearLayout
                    android:id="@+id/clinic_form_horario_atendimento_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/clinic_form_horario_atendimento_button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/clinic_form_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <TextView
        android:id="@+id/clinic_form_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_blank"
        android:textColor="@color/obrigatorio"
        android:visibility="invisible"
...
