<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/time_description_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/time_descrition_fragment_cardView"
        android:layout_width="0dp"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_descrition_fragment_textView_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="SEGUNDA-FEIRA" />

            <TextView
                android:id="@+id/time_descrition_fragment_textView_hour_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
...
                android:text="~"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/time_descrition_fragment_textView_hour_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
...
