<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pop_up_date_picker"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/date_picker_pop_up_image_view_not_use"
...

    <ImageView
        android:id="@+id/date_picker_pop_up_image_view_background_white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/pop_up_white_background_content"
        app:layout_constraintBottom_toBottomOf="@+id/date_picker_pop_up_button_confirm"
        app:layout_constraintEnd_toEndOf="@+id/date_picker_pop_up_number_picker_hour_end"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/date_picker_pop_up_number_picker_week_day"
        app:layout_constraintTop_toTopOf="@+id/date_picker_pop_up_textview_week_day"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/white"
...
